# API

./: .env.example  Cargo.toml  Dockerfile  README.md  bun.lockb  docker-compose.yml  package.json
.github/: deploy.yml
.github/workflow/: deploy.yml
src/: db.rs  index.js  main.rs  structs.rs
src/routes/: mod.rs  premium.rs  server.rs
