[package]
name = "teaclient_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde = "1.0.193"
serde_derive = "1.0.193"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
tokio-postgres = "0.7.10"
dotenv = "0.15.0"
serde_json = "1.0.108"
once_cell = "1.19.0"
